# llm_tracker

./: .gitignore  LICENSE  README.md  codecov.yaml  pyproject.toml  suicide_risk_codebook.json  tutorial.ipynb  tutorial_new.ipynb  tutorial_optimizer_reddit schema.ipynb  tutorial_optimizer_schema_n_examples.ipynb  tutorial_v2.ipynb  tutorial_v2_updated.ipynb  tutorial_v3.ipynb
.github/workflows/: docs.yaml  test.yaml
codebooks/: codebook_2_4_2025.json
comparison_run_2026-03-13_104251/comparisons/: reddit_data_subset.json
comparison_run_2026-03-13_104343/comparisons/: reddit_data_subset.json
dummy_human_2026-03-13_104138/: README.md
dummy_human_2026-03-13_104138/encodings/: reddit_data_subset.json
dummy_human_2026-03-13_104138/metadata/: reddit_data_subset_meta.json
my_analysis_1_2026-03-13_104132/: README.md
my_analysis_1_2026-03-13_104132/encodings/: reddit_data_subset.json
my_analysis_1_2026-03-13_104132/metadata/: reddit_data_subset_meta.json
my_analysis_2026-01-13_044012/: README.md
my_analysis_2026-01-20_033051/: README.md
my_analysis_2026-01-21_102127/: README.md
my_analysis_2026-01-27_041500/: README.md
my_analysis_2026-01-27_042144/: README.md
sample_data/: reddit_autism_anxiety_depression.csv  reddit_data_subset.csv
src/llm_tracker/: __init__.py  analyzer.py  comparison.py  config.py  corpus_summary.py  file_handlers.py  localtest.ipynb  models.py  prompting.py  utils.py
src/pychometrics/: __init__.py  analyzer.py  comparison.py  config.py  file_handlers.py  models.py  prompting.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_comparison.py  test_file_handlers.py  test_models.py  test_prompting.py  test_utils.py
