[tool.poetry]
name = "llm-tracker"
version = "0.1.0"
description = "A Python package for identifying psychological constructs in text using LLM analysis"
authors = ["LLM Tracker Team"]
readme = "README.md"
license = "MIT"
packages = [{include = "llm_tracker", from = "src"}]
keywords = ["psychology", "nlp", "llm", "text-analysis", "qualitative-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
pytest-asyncio = "^0.23.0"
black = ">=24,<27"
isort = ">=5.13,<9.0"
mypy = "^1.8"
ruff = ">=0.2,<0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
