[tool.poetry]
name = "llm-tracker"
version = "0.1.0"
description = "A Python package for identifying psychological constructs in text using LLM analysis"
authors = ["LLM Tracker Team"]
readme = "README.md"
license = "MIT"
packages = [{include = "llm_tracker", from = "src"}]
keywords = ["psychology", "nlp", "llm", "text-analysis", "qualitative-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
httpx = ">=0.27,<0.29"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.0"
pandas = ">=2.0,<3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8"
ruff = "^0.2"
ipykernel = "^7.2.0"
pytest-cov = "^5.0"
deptry = "^0.23"

[tool.poetry.group.tutorials]
optional = true

[tool.poetry.group.tutorials.dependencies]
textdescriptives = "^2.8.4"
spacy = ">=3.7,<3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true